deploy/kw/manifests/speech.json.yaml
{
  "apiVersion": "v1",
  "kind": "Service",
  "metadata":
    {
      "namespace": "enterprise-ai-demo",
      "labels": { "app.kubernetes.io/part-of": "enterprise-speech" },
      "name": "speech-tts",
    },
  "spec":
    {
      "type": "ExternalName",
      "externalName": "kuvryn-67579477-05ed-45a7-9903-c2dc7aabfac4-b4616c22.kuvryn-ai-workloads.svc.cluster.local",
      "ports": [{ "name": "http", "port": 8094, "targetPort": 8094 }],
    },
}
---
{
  "apiVersion": "v1",
  "kind": "Service",
  "metadata":
    {
      "namespace": "enterprise-ai-demo",
      "labels": { "app.kubernetes.io/part-of": "enterprise-speech" },
      "name": "speech-tts-breeze",
    },
  "spec":
    {
      "type": "ExternalName",
      "externalName": "kuvryn-29f86189-9566-4f0d-89fe-6c3b75174446-b4616c22.kuvryn-ai-workloads.svc.cluster.local",
      "ports": [{ "name": "http", "port": 8092, "targetPort": 8092 }],
    },
}
---
{
  "apiVersion": "v1",
  "kind": "Service",
  "metadata":
    {
      "namespace": "enterprise-ai-demo",
      "labels": { "app.kubernetes.io/part-of": "enterprise-speech" },
      "name": "speech-stt",
    },
  "spec":
    {
      "type": "ExternalName",
      "externalName": "kuvryn-0b03dce0-1eac-40dd-8541-59321391fac5-a46ea12d.kuvryn-ai-workloads.svc.cluster.local",
      "ports": [{ "name": "http", "port": 8093, "targetPort": 8093 }],
    },
}
---
{
  "apiVersion": "v1",
  "kind": "Service",
  "metadata":
    {
      "namespace": "enterprise-ai-demo",
      "labels": { "app.kubernetes.io/part-of": "enterprise-speech" },
      "name": "speech-tts-stream",
    },
  "spec":
    {
      "type": "ExternalName",
      "externalName": "kuvryn-9034ee12-b1c9-4b94-9cda-d1a9c6c0a366-a46ea12d.kuvryn-ai-workloads.svc.cluster.local",
      "ports": [{ "name": "http", "port": 8095, "targetPort": 8095 }],
    },
}
